// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Pre-conversion snapshots — about components About renders 1`] = `
<div
  animate={false}
  className="sc-kAycey kyOHBI"
>
  <div
    className="sc-imWYAH eQRhRs"
  >
    <div
      className="sc-aXZVf sttnM"
      onClick={[Function]}
    >
      <svg
        data-testid="svg-mock"
        height="16"
        width="16"
      />
      <span
        className="sc-gEvEes kUQrgB"
      >
        Download Press Kit
      </span>
    </div>
    <div
      className="sc-eqUAAB dbfHne"
    >
      <div
        className="sc-fqkvVO deiVyh"
        onClick={[Function]}
      >
        <p
          animate={false}
          className="sc-dcJsrX bPtGBo"
        >
          MISSION
        </p>
        <p
          className="sc-iGgWBk ddvcob"
        >
          –
        </p>
      </div>
      <p
        animate={false}
        className="sc-gsFSXt cVpGyj"
        isClosed={false}
      >
        Refugee Flow uses compelling visual design with comprehensive data to humanize the perilous transformation of the refugee.
      </p>
    </div>
    <div
      className="sc-eqUAAB dbfHne"
    >
      <div
        className="sc-fqkvVO deiVyh"
        onClick={[Function]}
      >
        <p
          animate={false}
          className="sc-dcJsrX bPtGBo"
        >
          VISION
        </p>
        <p
          className="sc-iGgWBk ddvcob"
        >
          +
        </p>
      </div>
      <p
        animate={false}
        className="sc-gsFSXt kzZNSy"
        isClosed={true}
      >
        Refugee Flow's vision is for all people to live to their fullest potential without threat of violence and for all people to understand each person's inherent dignity.
      </p>
    </div>
    <div
      className="sc-eqUAAB dbfHne"
    >
      <div
        className="sc-fqkvVO deiVyh"
        onClick={[Function]}
      >
        <p
          animate={false}
          className="sc-dcJsrX bPtGBo"
        >
          PROJECT TEAM
        </p>
        <p
          className="sc-iGgWBk ddvcob"
        >
          –
        </p>
      </div>
      <p
        animate={false}
        className="sc-gsFSXt cVpGyj"
        isClosed={false}
      >
        <em>
          <a
            href="https://www.linkedin.com/in/will-su"
            rel="noopener noreferrer"
            target="_blank"
          >
            Will Su - Co-Creator
          </a>
        </em>
          rides the line between design and technology. His work focuses on presenting data efficiently and beautifully with fluid interactivity. He has received awards from  
        <a
          href="https://www.informationisbeautifulawards.com/showcase/2348-nyc-foodiverse"
          rel="noopener noreferrer"
          target="_blank"
        >
          Information is Beautiful
        </a>
        ,  
        <a
          href="https://www.awwwards.com/sites/nyc-foodiverse"
          rel="noopener noreferrer"
          target="_blank"
        >
          Awwwards
        </a>
          and placed first at the  
        <a
          href="https://medium.com/@nycmedialab/prototyping-teams-win-12-000-in-prizes-at-mlbam-hackathon-organized-by-nyc-media-lab-d9fee4c7ccaf"
          rel="noopener noreferrer"
          target="_blank"
        >
          MLB Advanced Media Hackathon
        </a>
        . He speaks regularly at  
        <a
          href="https://www.meetup.com/UX-Support-Group/events/248956066/"
          rel="noopener noreferrer"
          target="_blank"
        >
          Meetups
        </a>
          and  
        <a
          href="https://dnnsociety.org/2018/01/01/from-graphic-designer-to-data-visualisation-specialist-a-sharing-from-will-su/"
          rel="noopener noreferrer"
          target="_blank"
        >
          universities
        </a>
          about his learning path and perspective on data visualization.
      </p>
      <p
        animate={false}
        className="sc-gsFSXt cVpGyj"
        isClosed={false}
      >
        <em>
          <a
            href="https://www.linkedin.com/in/abins"
            rel="noopener noreferrer"
            target="_blank"
          >
            Abin Abraham - Co-Creator
          </a>
        </em>
          is drawn to the intersection of technology, art, and policy. He is pursuing creative ways to understand the complex challenges facing the world today and believes that creativity is the key to effective policymaking. He works as a web developer at the United Nations Global Compact.
      </p>
      <p
        animate={false}
        className="sc-gsFSXt cVpGyj"
        isClosed={false}
        style={
          {
            "fontSize": "17px",
            "fontWeight": "800",
            "margin": 0,
          }
        }
      >
        <em>
          If you have any questions or feedback, please contact
        </em>
         
        <a
          href="mailto:refugeeflow@gmail.com"
          rel="noopener noreferrer"
          style={
            {
              "fontSize": "17px",
              "fontStyle": "italic",
              "fontWeight": "200",
              "margin": 0,
              "marginLeft": "8px",
            }
          }
          target="_blank"
        >
          refugeeflow@gmail.com
        </a>
      </p>
    </div>
    <div
      className="sc-eqUAAB dbfHne"
    >
      <div
        className="sc-fqkvVO deiVyh"
        onClick={[Function]}
      >
        <p
          animate={false}
          className="sc-dcJsrX bPtGBo"
        >
          Q & A
        </p>
        <p
          className="sc-iGgWBk ddvcob"
        >
          +
        </p>
      </div>
      <p
        animate={false}
        className="sc-gsFSXt kzZNSy"
        isClosed={true}
        style={
          {
            "fontSize": "20px",
            "fontWeight": 400,
            "lineHeight": 2,
          }
        }
      >
        What is Refugee Flow?
      </p>
      <p
        animate={false}
        className="sc-gsFSXt kzZNSy"
        isClosed={true}
      >
        Is an exploratory investigation of the migration crisis. Combining multiple datasets and interactive visualizations, the project aims to allow users to create a better understanding of the current crisis.
      </p>
      <p
        animate={false}
        className="sc-gsFSXt kzZNSy"
        isClosed={true}
        style={
          {
            "fontSize": "20px",
            "fontWeight": 400,
            "lineHeight": 2,
          }
        }
      >
        How can design and technology help find solutions in migration?
      </p>
      <p
        animate={false}
        className="sc-gsFSXt kzZNSy"
        isClosed={true}
      >
        Building solutions for the migration crisis requires political will, which must be driven by society. We are continually presented with facts and figures of the lingering refugee crisis but are unmoved. Our idea is to present this data in new, interesting, and visually appealing ways. Facts inform us, but they don't push us to act. Emotion gets people to act. Refugee Flow aims to merge design and technology to help better understand the migration crisis in a way that resonates with users. We hope this inspires better solutions.
      </p>
      <p
        animate={false}
        className="sc-gsFSXt kzZNSy"
        isClosed={true}
        style={
          {
            "fontSize": "20px",
            "fontWeight": 400,
            "lineHeight": 2,
          }
        }
      >
        What makes your team unique for this project?
      </p>
      <p
        animate={false}
        className="sc-gsFSXt kzZNSy"
        isClosed={true}
      >
        Will brings the creative mind of a designer with new interpretations of existing information. He has the development chops to turn creative concepts into a working application. Abin brings his web development background along with a nuanced understanding of the UN system. This awareness allows him to see what change is needed. Together, they provide a unique set of creative design capabilities.
      </p>
      <p
        animate={false}
        className="sc-gsFSXt kzZNSy"
        isClosed={true}
        style={
          {
            "fontSize": "20px",
            "fontWeight": 400,
            "lineHeight": 2,
          }
        }
      >
        What does Refugee Flow do differently than existing datasets?
      </p>
      <p
        animate={false}
        className="sc-gsFSXt kzZNSy"
        isClosed={true}
      >
        Refugee Flow has collected multiple datasets together to create an exploratory look at the crisis in a way that has never been done before. No other project is as dynamic or interactive as the one we built. Previous dashboards or portals show static data but Refugee Flow allows users to explore and discover facts on their own. Instead of only showing general trends over time, Refugee Flow allows users to dive in deeper and move beyond trends by seeing information on a case by case basis.
      </p>
      <p
        animate={false}
        className="sc-gsFSXt kzZNSy"
        isClosed={true}
        style={
          {
            "fontSize": "20px",
            "fontWeight": 400,
            "lineHeight": 2,
          }
        }
      >
        Who can use Refugee Flow and how?
      </p>
      <p
        animate={false}
        className="sc-gsFSXt kzZNSy"
        isClosed={true}
      >
        Anyone can use Refugee Flow. We built it as an exploratory tool to bring greater understanding to the crisis. This tool is for the person who has heard about the crisis, but wants to learn more.
      </p>
      <p
        animate={false}
        className="sc-gsFSXt kzZNSy"
        isClosed={true}
        style={
          {
            "fontSize": "20px",
            "fontWeight": 400,
            "lineHeight": 2,
          }
        }
      >
        Why is Refugee Flow important?
      </p>
      <p
        animate={false}
        className="sc-gsFSXt kzZNSy"
        isClosed={true}
      >
        Currently, UNHCR reports that 68.5 million people are forcibly displaced around the world. Funding to tackle the current challenge is decreasing, not increasing. By 2050 the continued impact of climate change will forcibly displace 1 billion people. The crisis is getting worse, not better. We must gain a greater understanding and we need to figure out better solutions to this crisis. Refugee Flow is a call to this action.
      </p>
    </div>
    <div
      className="sc-eqUAAB dbfHne"
    >
      <div
        className="sc-fqkvVO deiVyh"
        onClick={[Function]}
      >
        <p
          animate={false}
          className="sc-dcJsrX bPtGBo"
        >
          Data Sources
        </p>
        <p
          className="sc-iGgWBk ddvcob"
        >
          +
        </p>
      </div>
      <p
        animate={false}
        className="sc-gsFSXt kzZNSy"
        isClosed={true}
      >
        •  
        <em>
          <a
            href="https://www.unhcr.org/refugee-statistics/download/"
            rel="noopener noreferrer"
            target="_blank"
          >
            UNHCR Refugee Data Finder
          </a>
        </em>
          provides global asylum application data by country of origin and destination. Refugee Flow uses UNHCR annual totals from 2010 to present, covering asylum seekers, refugees, and other populations of concern worldwide.
      </p>
      <p
        animate={false}
        className="sc-gsFSXt kzZNSy"
        isClosed={true}
      >
        •  
        <em>
          <a
            href="https://missingmigrants.iom.int/downloads"
            rel="noopener noreferrer"
            target="_blank"
          >
            Missing Migrants Project
          </a>
        </em>
          tracks deaths of migrants, including refugees and asylum-seekers, who have died or gone missing in the process of migration towards an international destination.
      </p>
      <p
        animate={false}
        className="sc-gsFSXt kzZNSy"
        isClosed={true}
      >
        •  
        <em>
          <a
            href="http://www.themigrantsfiles.com/"
            rel="noopener noreferrer"
            target="_blank"
          >
            The Migrants Files
          </a>
        </em>
          is a consortium of journalists from over 10 EU countries. It is coordinated by Journalism++.
      </p>
      <p
        animate={false}
        className="sc-gsFSXt kzZNSy"
        isClosed={true}
      >
        •  
        <em>
          <a
            href="https://frontex.europa.eu/along-eu-borders/migratory-map/"
            rel="noopener noreferrer"
            target="_blank"
          >
            Frontex
          </a>
        </em>
          the European Border and Coast Guard Agency, promotes, coordinates and develops European border management in line with the EU fundamental rights charter and the concept of Integrated Border Management. To help identify migratory patterns as well as trends in cross-border criminal activities, Frontex analyses data related to the situation at and beyond EU's external borders.
      </p>
      <p
        animate={false}
        className="sc-gsFSXt kzZNSy"
        isClosed={true}
      >
        •  
        <em>
          <a
            href="https://www.acleddata.com/data/"
            rel="noopener noreferrer"
            target="_blank"
          >
            ACLED
          </a>
        </em>
          (Armed Conflict Location & Event Data) is a disaggregated conflict analysis and crisis mapping project. ACLED is the highest quality, most widely used, realtime data and analysis source on political violence and protest in the developing world. Practitioners, researchers and governments depend on ACLED for the latest reliable information on current conflict and disorder patterns.
      </p>
      <p
        animate={false}
        className="sc-gsFSXt kzZNSy"
        isClosed={true}
      >
        •  
        <em>
          <a
            href="https://ec.europa.eu/eurostat/web/migration-asylum/asylum/database"
            rel="noopener noreferrer"
            target="_blank"
          >
            Eurostat
          </a>
        </em>
          provides monthly asylum application statistics for EU/EEA countries. Quarterly breakdowns for non-EU destinations are estimated using Eurostat seasonal distribution patterns applied to UNHCR annual totals.
      </p>
      <p
        animate={false}
        className="sc-gsFSXt kzZNSy"
        isClosed={true}
      >
        •  
        <em>
          <a
            href="https://www.cbp.gov/newsroom/stats/nationwide-encounters"
            rel="noopener noreferrer"
            target="_blank"
          >
            U.S. Customs and Border Protection
          </a>
        </em>
          (CBP) publishes monthly encounter statistics for U.S. land borders. Refugee Flow uses Title 8 U.S. Border Patrol apprehension data for the Americas route, aggregated quarterly by nationality. CBP data covers FY2020 (October 2019) to present. Pre-2020 data is not available in machine-readable format.
      </p>
      <p
        animate={false}
        className="sc-gsFSXt kzZNSy"
        isClosed={true}
      >
        •  
        <em>
          <a
            href="https://www.gov.uk/government/statistical-data-sets/immigration-system-statistics-data-tables"
            rel="noopener noreferrer"
            target="_blank"
          >
            UK Home Office
          </a>
        </em>
          publishes quarterly statistics on irregular entry routes to the UK. Refugee Flow uses small boat arrival data for the English Channel route, aggregated by nationality. Data covers 2018 Q1 to present.
      </p>
    </div>
  </div>
</div>
`;

exports[`Pre-conversion snapshots — about components Accordion renders closed 1`] = `
<div
  className="sc-eqUAAB dbfHne"
>
  <div
    className="sc-fqkvVO deiVyh"
    onClick={[Function]}
  >
    <p
      animate={false}
      className="sc-dcJsrX bPtGBo"
    >
      CLOSED
    </p>
    <p
      className="sc-iGgWBk ddvcob"
    >
      +
    </p>
  </div>
  <span>
    child
  </span>
</div>
`;

exports[`Pre-conversion snapshots — about components Accordion renders open 1`] = `
<div
  className="sc-eqUAAB dbfHne"
>
  <div
    className="sc-fqkvVO deiVyh"
    onClick={[Function]}
  >
    <p
      animate={true}
      className="sc-dcJsrX gjUevm"
    >
      TEST
    </p>
    <p
      className="sc-iGgWBk ddvcob"
    >
      –
    </p>
  </div>
  <span>
    child
  </span>
</div>
`;

exports[`Pre-conversion snapshots — about components DownloadLink renders 1`] = `
<div
  className="sc-aXZVf sttnM"
  onClick={[Function]}
>
  <svg
    data-testid="svg-mock"
    height="16"
    width="16"
  />
  <span
    className="sc-gEvEes kUQrgB"
  >
    Download Press Kit
  </span>
</div>
`;

exports[`Pre-conversion snapshots — about components Paragraph renders 1`] = `
<p
  animate={true}
  className="sc-gsFSXt cOWqDK"
  isClosed={false}
>
  Hello world
</p>
`;

exports[`Pre-conversion snapshots — annotation Annotation renders 1`] = `
<div
  className="sc-jXbUNf dHqJJl annotation-wrapper"
  onClick={[Function]}
>
  <p
    className="sc-dhKdcy vWqwR"
  >
    Click anywhere to explore Refugee Flow
  </p>
</div>
`;

exports[`Pre-conversion snapshots — landing DesktopLanding renders 1`] = `
<div
  animation={false}
  className="sc-cPiKLY hEZHNG"
>
  <a
    href="/"
    onClick={[Function]}
  >
    Refugee Flow
  </a>
  <div
    animation={false}
    className="sc-dLMFT fktvkU"
    onClick={[Function]}
    videoLoop={false}
    wikiOn={false}
  >
    INFO
    <svg
      data-testid="svg-mock"
    />
  </div>
  <div
    className="sc-eDPEui ixoZnZ"
    wikiOn={false}
  >
    <div
      className="sc-eldPxw ioMAa-D"
      onClick={[Function]}
    >
      x
    </div>
    <div
      className="sc-fPXMVh hPltnj"
      wikiOn={false}
    >
      <p
        className="sc-dAbbOM dHMqKL"
      >
        Introduction
      </p>
      <div
        className="sc-ikkxIz uROqp"
      >
        <p
          className="sc-gFqAkO jnacIT"
        >
          To leave one's home country, community, and loved ones is a difficult prospect even in times of peace. As violence, persecution, and terror surge the only option for survival and security is to flee one's home.
        </p>
        <p
          className="sc-gFqAkO jnacIT"
        >
          The United Nations High Commissioner for Refugees reports that as of 2017, 68.5 million people were forcibly displaced worldwide due to persecution, conflict, violence, and human rights violations.
        </p>
        <p
          className="sc-gFqAkO jnacIT"
        >
          To become a refugee is to subject a person to the most pervasive form of cruelty by removing their basic need to lead a normal life. All aspects that make human life tolerable and meaningful are lost to the refugee. Refugees are placed in inhospitable host countries that do not want them. They face the brute indifference of the walls that people build between nations and cultures. Yet each refugee surrenders to the hardship of leaving their old lives and the lives they could have lived to find peace and safety elsewhere.
        </p>
        <p
          className="sc-gFqAkO jnacIT"
        >
          Every refugee is an example of a world that failed to use its common strength for the common good.
        </p>
      </div>
    </div>
    <div
      className="sc-fPXMVh hPltnj"
      wikiOn={false}
    >
      <p
        className="sc-dAbbOM dHMqKL"
      >
        The Approach
      </p>
      <div
        className="sc-ikkxIz uROqp"
      >
        <p
          className="sc-gFqAkO jnacIT"
        >
          Refugee Flow gathers data from multiple reliable sources to construct a compelling account on how persons become refugees. This project examines one of the direct fundamental causes of the global refugee crisis, the collapse of order and stability in todays international landscape.
        </p>
        <p
          className="sc-gFqAkO jnacIT"
        >
          This visualization examines the impact conflict, persecution and violence has on the lives of persons in their home countries and communities. The dataset delves into exploring what drives people to flee their homes and bear the burden of a life as a refugee.
        </p>
        <p
          className="sc-gFqAkO jnacIT"
        >
          The project further explores the possible routes taken by refugees. The dataset examines the dangers those forcibly displaced face in their search for safety. Many refugees who depart on their journey never make it to their intended destination. The data collected presents the cause of these deaths along their chosen routes.
        </p>
      </div>
    </div>
    <p
      className="sc-feUZmx bVJoBM"
    >
      Built by: 
      <a
        href="https://willsu.io"
      >
        Will Su
      </a>
      , 
      <a
        href="https://github.com/abinofbrooklyn"
      >
        Abin Abraham
      </a>
    </p>
  </div>
  <div
    id="video"
  >
    <div
      className="sc-hmdomR jpPeDK"
    />
    <section
      className="sc-hzhJZP IZxOg"
    >
      <video
        animation={false}
        autoPlay={true}
        className="sc-fHjqPg hAnpjc"
        loop={true}
        muted={true}
        style={
          {
            "backgroundVideo": "url(assets/img/hero.jpg)",
          }
        }
        videoLoop={false}
      >
        <source
          src="https://player.vimeo.com/external/278983563.hd.mp4?s=df2675a8395d48ad7b455f155ae148361121b298&profile_id=175"
        />
      </video>
      <p
        animation={false}
        className="sc-fUnMCe eMZhho"
        videoLoop={false}
      >
        "At 
        <i>
          sea
        </i>
        , a frightening number of refugees and migrants are dying each year. On 
        <i>
          land
        </i>
        , people fleeing war are finding their way blocked by closed 
        <i>
          borders
        </i>
        . Closing borders does not solve the problem"
      </p>
    </section>
  </div>
  <a
    animation={false}
    className="sc-bXCLTF gLOsOM"
    href="/conflict"
  >
    Launch Visualization
  </a>
</div>
`;

exports[`Pre-conversion snapshots — landing MobileLanding renders 1`] = `
<div
  className="sc-eeDRCX bpNnCN"
>
  <div
    className="sc-jsJBEQ kABfMe"
  >
    <a
      href="/"
      onMouseOut={[Function]}
      onMouseOver={[Function]}
    >
      Refugee Flow
    </a>
  </div>
  <video
    animation={false}
    autoPlay={true}
    className="sc-koXPm feDfQI"
    loop={true}
    muted={true}
    style={
      {
        "backgroundVideo": "url(assets/img/hero.jpg)",
      }
    }
    videoLoop={false}
  >
    <source
      src="https://player.vimeo.com/external/278983563.hd.mp4?s=df2675a8395d48ad7b455f155ae148361121b298&profile_id=175"
    />
  </video>
  <p
    animation={false}
    className="sc-bmzYkV kSbtRq"
  >
    Thanks for your interest in learning more about the refugee crisis. We designed Refugee Flow as an exploratory experience.
    <br />
    <br />
     Unfortunately mobile is not best suited for what we built. Instead, please bookmark the page and comeback and explore when you are on a laptop or desktop. 
  </p>
  <p
    animation={false}
    className="sc-iHGNWg gDkBoW"
    onClick={[Function]}
  >
    Learn More...
  </p>
</div>
`;

exports[`Pre-conversion snapshots — navbar Navbar renders in router + redux context 1`] = `
<div
  className="sc-cwHptO dUVZkv"
  id="nav-show"
>
  <a
    href="/"
    onClick={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    Refugee Flow
  </a>
  <nav
    className="sc-jEACwF jJodkt"
    currentPage={null}
  >
    <a
      href="/conflict"
      onClick={[Function]}
    >
      Conflict
    </a>
    <a
      href="/route/EasternMediterranean"
      onClick={[Function]}
    >
      Route
    </a>
    <a
      href="/about"
      onClick={[Function]}
    >
      About
    </a>
    <a
      onClick={[Function]}
    >
      Donate
    </a>
  </nav>
</div>
`;
